ci-base/asserts/css/style.css
/*================================================================================
	Item Name: Materialize - Material Design Admin Template
	Version: 1.0
	Author: GeeksLabs
	Author URL: http://www.themeforest.net/user/geekslabs
================================================================================*/
/*-----------------------------------------

------------------------------------------*/
/*=================================================================================
    General
====================================================================================*/
/*----------------------------------------
  General Layout Style
------------------------------------------*/

body {
  background-color: #fcfcfc;
}
#main,
footer {
  padding-left: 180px;
}
.margin {
  margin: 0;
}
#input-select .input-field label {
  position: absolute;
  top: -14px;
  font-size: 0.8rem;
}
#sidenav-overlay {
  background-color: transparent;
}
.container {
  padding: 0 0.5rem;
  margin: 0 auto;
  max-width: 100% !important;
  width: 98%;
}

#left-sidebar-nav span.badge.new{
  line-height: 20px;
  margin-top: 11px;
}

#content .container .row {
  margin-bottom: 0;
}
@media only screen and (min-width: 601px) {
  .container {
    width: 98%;
  }
}
@media only screen and (min-width: 993px) {
  .container {
    width: 98%;
  }
}
@media only screen and (max-width: 993px) {
  #main,
  footer {
    padding-left: 0px;
  }
}
/*---------------------------------
    Typography
-----------------------------------*/

.small {
  font-size: 1.0rem;
  margin: 0;
  padding: 0;
}
.medium-small {
  font-size: 0.9rem;
  margin: 0;
  padding: 0;
}
.ultra-small {
  font-size: 0.8rem;
  margin: 0;
  padding: 0;
}
small {
  font-size: 0.8rem;
}
.strong {
  font-weight: 600;
}
h4.header {
  font-size: 1.5rem;
  line-height: 2.508rem;
  margin: 1.14rem 0 0.912rem 0;
}
p.title {
  font-size: 1.3rem;
}
p.header {
  font-size: 1rem;
  font-weight: 500;
  text-transform: uppercase;
}
h4.header {
  font-size: 1.4rem;
  font-weight: 400;
  text-transform: uppercase;
}
h4.header2 {
  font-size: 1.1rem;
  font-weight: 400;
  text-transform: uppercase;
}
li.li-hover:hover{
  background: transparent !important;
}
.more-text{
  padding: 5px 20px;
  font-weight: 500;
  letter-spacing: 1px;
  text-transform: uppercase;
}
.valign-demo {
  height: 400px;
  background-color: #ddd;
}
/*----------------------------------------
    Pre Loader
------------------------------------------*/
#loader-wrapper {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1000;
}
#loader {
  display: block;
  position: relative;
  left: 50%;
  top: 50%;
  width: 150px;
  height: 150px;
  margin: -75px 0 0 -75px;
  border-radius: 50%;
  border: 3px solid transparent;
  border-top-color: #3498db;
  -webkit-animation: spin 2s linear infinite;
  /* Chrome, Opera 15+, Safari 5+ */
  
  animation: spin 2s linear infinite;
  /* Chrome, Firefox 16+, IE 10+, Opera */
  
  z-index: 1001;
}
#loader-logo {
  display: block;
  position: absolute;
  left: 48%;
  top: 46%;
  background: url(../images/ulm_logo_a.png) no-repeat center top;  
  z-index: 1001;
}
#loader:before {
  content: "";
  position: absolute;
  top: 5px;
  left: 5px;
  right: 5px;
  bottom: 5px;
  border-radius: 50%;
  border: 3px solid transparent;
  border-top-color: #e74c3c;
  -webkit-animation: spin 3s linear infinite;
  /* Chrome, Opera 15+, Safari 5+ */
  
  animation: spin 3s linear infinite;
  /* Chrome, Firefox 16+, IE 10+, Opera */
}
#loader:after {
  content: "";
  position: absolute;
  top: 15px;
  left: 15px;
  right: 15px;
  bottom: 15px;
  border-radius: 50%;
  border: 3px solid transparent;
  border-top-color: #f9c922;
  -webkit-animation: spin 1.5s linear infinite;
  /* Chrome, Opera 15+, Safari 5+ */
  
  animation: spin 1.5s linear infinite;
  /* Chrome, Firefox 16+, IE 10+, Opera */
}
@-webkit-keyframes spin {
  0% {
    -webkit-transform: rotate(0deg);
    /* Chrome, Opera 15+, Safari 3.1+ */
    
    -ms-transform: rotate(0deg);
    /* IE 9 */
    
    transform: rotate(0deg);
    /* Firefox 16+, IE 10+, Opera */
  }
  100% {
    -webkit-transform: rotate(360deg);
    /* Chrome, Opera 15+, Safari 3.1+ */
    
    -ms-transform: rotate(360deg);
    /* IE 9 */
    
    transform: rotate(360deg);
    /* Firefox 16+, IE 10+, Opera */
  }
}
@keyframes spin {
  0% {
    -webkit-transform: rotate(0deg);
    /* Chrome, Opera 15+, Safari 3.1+ */
    
    -ms-transform: rotate(0deg);
    /* IE 9 */
    
    transform: rotate(0deg);
    /* Firefox 16+, IE 10+, Opera */
  }
  100% {
    -webkit-transform: rotate(360deg);
    /* Chrome, Opera 15+, Safari 3.1+ */
    
    -ms-transform: rotate(360deg);
    /* IE 9 */
    
    transform: rotate(360deg);
    /* Firefox 16+, IE 10+, Opera */
  }
}
#loader-wrapper .loader-section {
  position: fixed;
  top: 0;
  width: 51%;
  height: 100%;
  background: #222222;
  z-index: 1000;
  -webkit-transform: translateX(0);
  /* Chrome, Opera 15+, Safari 3.1+ */
  
  -ms-transform: translateX(0);
  /* IE 9 */
  
  transform: translateX(0);
  /* Firefox 16+, IE 10+, Opera */
}
#loader-wrapper .loader-section.section-left {
  left: 0;
}
#loader-wrapper .loader-section.section-right {
  right: 0;
}
/* Loaded */

.loaded #loader-wrapper .loader-section.section-left {
  -webkit-transform: translateX(-100%);
  /* Chrome, Opera 15+, Safari 3.1+ */
  
  -ms-transform: translateX(-100%);
  /* IE 9 */
  
  transform: translateX(-100%);
  /* Firefox 16+, IE 10+, Opera */
  
  -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
  transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
}
/* ... */

